<resources>
    <string name="app_name">ABX Cinema</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="online_banking">Online Banking</string>
    <string name="credit_card">Credit Card</string>
    <string name="tng_e_wallet">TNG E-wallet</string>
    <string name="selected_bank">Selected Online Banking</string>
    <string name="selected_card">Selected Credit Card</string>
    <string name="selected_Ewallet">Selected TNG E-wallet</string>
    <string name="start">Start</string>
    <string name="payment_selection">Payment Selection</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upload_id_prof_pic">Upload id prof pic</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>

    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot"><b><u>FORGOT PASSWORD?</u></b></string>
    <string name="login"><b>LOGIN</b></string>
    <string name="sign_up"><u>Sign Up For ABX</u></string>
    <string name="sign_out">Sign Out</string>
    <string name="signUp">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree">I agree with the </string>
    <string name="tnc"><a href="">terms and conditions</a></string>
    <string name="terms"><b>Terms and Conditions</b></string>
    <string name="create_account"><b>Create Account</b></string>
    <string name="reset">Reset Password</string>
    <string name="instruction">To reset your password, Please enter your registered email here!</string>
    <string name="condition"> We do not sell your personal data to third party and we do not share information that directly identifies you
        (such as your email address or other contact information)\n1. Tickets sold are non-refundable.\n2. Please check the transaction amount before payment.
        Any disputes in the transaction amount discovered
        thereafter will not be entertained.</string>
    <string name="img">1</string>
    <string name="promotion">Promotion</string>
    <string name="combo_popcorn">Combo Popcorn</string>
    <string name="ala_carte_popcorn">Ala carte Popcorn</string>
    <string name="snacks">Snacks</string>
    <string name="beverages">Beverages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_count">0</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="plus_button_description">Plus Button</string>

    <!--Product detail from huiru-->
    <string name="productdetail">Product Detail</string>
    <string name="synopsis">Synopsis</string>
    <string name="actors">Actors</string>
    <string name="director">Director</string>
    <string name="timeslot">Timeslot</string>

    <string name="bloodshotTitle">Bloodshot</string>
    <string name="bloodshotDescription">P13 - Action, Adventure - 107 Minutes - English</string>
    <string name="bloodshotSummary">Bloodshot, an ex-killer for the mob, is kidnapped and injected with microscopic computers called nanites. They erase his brain and rebuild it and his body to be a weapon with superhuman strength and healing powers. Bloodshot escapes his makers, tries to figure out who he was, and takes revenge on those who betrayed him. Based on the Valiant Comics series by the same name.
    </string>
    <string name="bloodshotActors">Vin Diesel, Eiza Gonzalez, Sam Heughan, Toby Kebbell, Talulah Riley, Lamorne Morris, Guy Pearce, Jóhannes Jóhannesson, Alex Hernandez, Siddharth Dhananjay</string>
    <string name="bloodshotDirector">David Wilson</string>

    <string name="onwardTitle">Onward</string>
    <string name="onwardDescription">U - Adventure, Fantasy - 102 Minutes - English</string>
    <string name="onwardSummary">In Disney and Pixar\'s ONWARD, two teenage elf brothers Ian and Barley Lightfoot (voices of Tom Holland and Chris Pratt) get an unexpected opportunity to spend one more day with their late dad and embark on an extraordinary quest aboard Barley\'s epic van Guinevere. Like any good quest, their journey is filled with magic spells, cryptic maps, impossible obstacles, and unimaginable discoveries. But when the boys\' fearless mom Laurel (voice of Julia Louis-Dreyfus) realizes that her sons are missing, she teams up with a part-lion, part-bat, part-scorpion, former warrior – aka The Manticore (voice of Octavia Spencer) – and heads off to find them. Perilous curses aside, this one magical day could mean more than any of them ever dreamed.
    </string>
    <string name="onwardActors">Tom Holland, Chris Pratt, Julia Louis-Dreyfus, Octavia Spencer, Mel Rodriguez, Kyle Bornheimer, Lena Waithe, Ali Wong, Grey Griffin, Tracey Ullman, Wilmer Valderrama, George Psarras, John Ratzenberger</string>
    <string name="onwardDirector">Dan Scanlon</string>

    <string name="sonicTitle">Sonic The Hedgedog</string>
    <string name="sonicDescription">P13 - Action, Adventure - 98 Minutes - English</string>
    <string name="sonicSummary">The world needed a hero, we got a hedgehog. Powered with incredible speed, Sonic The Hedgehog (voiced by Ben Schwartz), aka The Blue Blur, embraces his new home on Earth. That is, until he accidentally knocks out the power grid and sparks the attention of super-uncool evil genius Dr. Robotnik (Jim Carrey). Now it’s super-villain vs. super-sonic in an all-out race across the globe to stop Robotnik from using Sonic’s unique power for world domination. Sonic teams up with The Donut Lord, aka Sheriff Tom Wachowski (James Marsden), to save the planet in this live-action adventure comedy that’s fun for the whole family.
    </string>
    <string name="sonicActors">James Marsden, Tika Sumpter, Jim Carrey, Ben Schwartz</string>
    <string name="sonicDirector">Jeff Fowler</string>

    <string name="_4_30pm">4.30pm</string>
    <string name="_7_00pm">7.00pm</string>
    <string name="_1_15pm">1.15pm</string>
    <string name="_3_45pm">3.45pm</string>
    <string name="_9_00am">9.00am</string>
    <string name="_11_00am">11.00am</string>
    <!--Product detail from huiru-->

    <!--seat from huiru-->
    <string name="screen">Screen</string>
    <string name="confirm">Confirm</string>
    <string name="book">Available</string>
    <string name="reserved">Reserved</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="_1">1</string>
    <!--seat from huiru-->


    <string name="paymentsuccess">paymentsuccesspic</string>
    <string name="paymentsuccesstext">Ticket Bought Successfully !</string>
    <string name="exitpaymentsuccess"><![CDATA[< Return]]></string>
    <string name="exitPaymentHistory"><![CDATA[< Payment History]]></string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="cardholder_number">CardHolder Number</string>
    <string name="card_number">0000-0000-0000-0000</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="card_type">Card Type</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="other_payment_method">Other Payment Method</string>
    <string name="cancel_payment">Cancel Payment and Return to previous screen</string>
    <string name="user_agreement">I agree to have my payment details securely saved for future purchases</string>
    <string name="cardtype">cardType</string>
    <string name="cvv">CVV</string>
    <string name="payment_details">Payment Details</string>
    <string name="credit_title">Credit Card or Debit Card</string>
    <!--Payment -->


</resources>