<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onward"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/onwardImage"
        android:layout_width="142dp"
        android:layout_height="165dp"
        android:src="@drawable/onward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onwTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:text="@string/onwardTitle"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onwardImage" />

    <TextView
        android:id="@+id/onwdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:text="@string/onwardDescription"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onwTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/synopsis"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onwdescription" />

            <TextView
                android:id="@+id/onwsummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/onwardSummary"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/synopsis" />

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/actors"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onwsummary" />

            <TextView
                android:id="@+id/onwactors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/onwardActors"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actors" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/director"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onwactors" />

            <TextView
                android:id="@+id/onwdirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/onwardDirector"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/director" />

            <TextView
                android:id="@+id/timeslot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:text="@string/timeslot"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onwdirector" />

            <Button
                android:id="@+id/time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="time3"
                android:text="@string/_1_15pm"
                android:layout_marginStart="8dp"
                tools:layout_editor_absoluteX="195dp"
                tools:layout_editor_absoluteY="373dp" />

            <Button
                android:id="@+id/time4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:onClick="time4"
                android:text="@string/_3_45pm"
                tools:layout_editor_absoluteX="195dp"
                tools:layout_editor_absoluteY="373dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>