<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/advertisement"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/promo"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="onPromo"
                android:text="@string/promotion" />

            <Button
                android:id="@+id/comboPop"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="onCombo"
                android:text="@string/combo_popcorn"
                android:visibility="visible" />

            <Button
                android:id="@+id/alaCarte"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="onAlaCarte"
                android:text="@string/ala_carte_popcorn" />

            <Button
                android:id="@+id/snacks"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="onSnacks"
                android:text="@string/snacks" />

            <Button
                android:id="@+id/Beverages"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="onBeverages"
                android:text="@string/beverages" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/promo_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="110dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/combo_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ala_carte_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>

        <LinearLayout
            android:id="@+id/snacks_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>

        <LinearLayout
            android:id="@+id/beverages_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>

    </LinearLayout>

</LinearLayout>
